--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -61,6 +61,7 @@ footer {
     "PVDA":4,
     "GROEN!":14,
     "sp.a":12,
+    "sp.a-one brussels":1,
     "CD&V":19,
     "Open Vld":16,
     "N-VA":35,
@@ -86,6 +87,10 @@ footer {
       reject:["VB"]
     },
     "sp.a":{
+      require:[],
+      reject:["VB"]
+    },
+    "sp.a-one brussels":{
       require:[],
       reject:["VB"]
     },
@@ -132,6 +137,7 @@ footer {
     "CD&V":"NL",
     "sp.a":"NL",
     "sp.a-spirit":"NL",
+	"sp.a-one brussels":"NL",
     "Open Vld":"NL",
     "VB":"NL",
     "GROEN!":"NL",
@@ -158,6 +164,7 @@ footer {
     "N-VA":"#FCB340",
     "CD&V":"#F89734",
     "sp.a":"#FF0B14",
+	"sp.a-one brussels":"#FF0B14",
     "sp.a-spirit":"#FF0B14",
     "Open Vld":"#4997D5",
     "VB":"#FFCC33",
@@ -189,6 +196,7 @@ footer {
     "SP":"socialistes",
     "sp.a-spirit":"socialistes",
     "sp.a":"socialistes",
+	"sp.a-one brussels":"socialistes",
     "AGALEV":"verts",
     "GROEN!":"verts",
     "PS":"socialistes",
