--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -87,11 +87,11 @@ footer {
       reject:["VB"]
     },
     "sp.a":{
-      require:[],
+      require:["sp.a-one brussels"],
       reject:["VB"]
     },
     "sp.a-one brussels":{
-      require:[],
+      require:["sp.a"],
       reject:["VB"]
     },
     "N-VA":{
