--- a/index.html
+++ b/index.html
@@ -759,34 +759,34 @@ footer {
   // 2019
   var leg2019 = {
    chamb : {
-    "PTB":9,//9,//8,//5
-    "PVDA":3,//3,//8,//5
-    "ecolo":13,//16,//14,//11,
-    "GROEN!":8,//12,//15,//12,
-    "PS":20,//20,//18,//19,
-    "sp.a":9,//11,//9,//9,
-    "CDh":5,//4,//5,//8,
-    "CD&V":12,//14,//14,//19,
-    "DéFI":2,//1,//3,//3,
-    "MR":14,//13,//14,//17,
-    "Open Vld":12,//12,//12,//14,
-    "N-VA":25,//28,//23,
-    "VB":18//8,//8,//10,
+    "PTB":9,
+    "PVDA":3,
+    "ecolo":13,
+    "GROEN!":8,
+    "PS":20,
+    "sp.a":9,
+    "CDh":5,
+    "CD&V":12,
+    "DéFI":2,
+    "MR":14,
+    "Open Vld":12,
+    "N-VA":25,
+    "VB":18
    },
    sena : {
-    "N-VA":12,
-    "PS":9,
-    "MR":9,
-    "CD&V":8,
+    "N-VA":9,
+    "PS":7,
+    "MR":7,
+    "CD&V":5,
     "Open Vld":5,
-    "sp.a":5,
-    "CDh":4,
-    "ecolo":3,
-    "GROEN!":3,
-    "VB":2,
+    "sp.a":4,
+    "CDh":2,
+    "ecolo":5,
+    "GROEN!":4,
+    "VB":7,
     "DéFI":0,
-    "PTB":0,
-    "PVDA":0
+    "PTB":4,
+    "PVDA":1
    },
    dePart : "MR", // le parti du sénateur germanophone (siège à décompter pour atteindre la majorité francophone)
    gagnants : { // progressions
@@ -894,7 +894,6 @@ progrInit : {
    },
    specCoa : {
     "centre-droit diminuée":{"CD&V":true, "N-VA":true, "CDh":true, "MR":true},
-    "grande suédoise":{"CD&V":true, "N-VA":true, "Open Vld":true, "MR":true, "CDh":true},
     "suédoise ou kamikaze":{"CD&V":true, "N-VA":true, "Open Vld":true, "MR":true}
    },
    critCordon : false,
@@ -1022,7 +1021,7 @@ progrInit : {
     "violette":     {"socialistes":true,"libéraux":true},
     "turquoise":    {"libéraux":true   ,"verts":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
-    "centre-droit":{"libéraux":true   ,"centristes":true, "N-VA":true},
+    "centre-droit ou grande suédoise":{"libéraux":true   ,"centristes":true, "N-VA":true},
     "bourguignonne": {"libéraux":true   ,"N-VA":true, "socialistes":true},
 
     "lilas ou arménienne":{"libéraux":true,"centristes":true,"PS":true},
