--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -208,7 +208,7 @@ footer {
 
   var inputs;
   var tradCoa = {
-    "quadripartite d’union nationale":{
+    "quadripartite traditionelle":{
       "socialistes":true, 
       "libéraux":true, 
       "centristes":true, 
