--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -682,7 +682,7 @@ footer {
 
   var inputs;
   var tradCoa = {
-    "quadripartite d’union nationale":{
+    "quadripartite traditionnelle":{
       "socialistes":true, 
       "libéraux":true, 
       "centristes":true, 
