--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -222,7 +222,7 @@ footer {
     "rouge romaine":{"socialistes":true,"centristes":true},
     "violette":     {"socialistes":true,"libéraux":true},
     "truquoise":    {"libéraux":true   ,"verts":true},
-	"centre droit": {"libéraux":true   ,"centristes":true, "N-VA":true},
+	"centre droit ou suédoise": {"libéraux":true   ,"centristes":true, "N-VA":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
 	
 	"bourguignonne": {"N-VA":true, "Open Vld":true, "sp.a":true}
