--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -225,7 +225,7 @@ footer {
 	"centre droit ou suédoise": {"libéraux":true   ,"centristes":true, "N-VA":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
 	
-	"bourguignonne": {"N-VA":true, "Open Vld":true, "sp.a":true}
+	"bourguignonne": {"N-VA":true, "libéraux":true, "socialistes":true}
   };
   
   var coalitions;
