--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -661,6 +661,7 @@ footer {
     
     $("#hideRedun")[0].checked = currentLeg.hideRedun;
     showHideRedun();
+	critUpdate();
   }  
   
   function critUpdate() {
