--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -588,6 +588,8 @@ footer {
     }
    },
    specCoa : {
+     "portugaise":  {"socialistes":true,"verts":true,"communistes":true},
+     "coquelicot":  {"socialistes":true,"verts":true}
    },
    critCordon : true,
    critWinners : false,
@@ -677,7 +679,8 @@ footer {
     "MR":"libéraux",
     "PSC":"centristes",
     "CDh":"centristes",
-    "ecolo":"verts"
+    "ecolo":"verts",
+	"PTB":"communistes"
   };
 
   var inputs;
@@ -690,7 +693,7 @@ footer {
 
     "tripartite traditionnelle":{"socialistes":true,"libéraux":true  ,"centristes":true},
     "olivier":                  {"socialistes":true,"centristes":true,"verts":true},
-    "arc-en-ciel":              {"socialistes":true,"libéraux":true  ,"verts":true},
+    "arc-en-ciel ou gambienne": {"socialistes":true,"libéraux":true  ,"verts":true},
     "jamaïcaine":               {"libéraux":true   ,"centristes":true,"verts":true},
 
     "rouge romaine":{"socialistes":true,"centristes":true},
