--- a/index.html
+++ b/index.html
@@ -759,10 +759,10 @@ footer {
   // 2019
   var leg2019 = {
    chamb : {
-    "PTB":9,
-    "PVDA":3,
-    "ecolo":13,
-    "GROEN!":8,
+    "PTB":8,
+    "PVDA":4,
+    "ecolo":12,
+    "GROEN!":9,
     "PS":20,
     "sp.a":9,
     "CDh":5,
@@ -1014,7 +1014,7 @@ progrInit : {
 
     "tripartite traditionnelle":{"socialistes":true,"libéraux":true  ,"centristes":true},
     "olivier":                  {"socialistes":true,"centristes":true,"verts":true},
-    "arc-en-ciel":              {"socialistes":true,"libéraux":true  ,"verts":true},
+    "arc-en-ciel au gambienne":              {"socialistes":true,"libéraux":true  ,"verts":true},
     "jamaïcaine":               {"libéraux":true   ,"centristes":true,"verts":true},
 
     "rouge romaine":{"socialistes":true,"centristes":true},
