--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@ progrInit : {
 
     "tripartite traditionnelle":{"socialistes":true,"libéraux":true  ,"centristes":true},
     "olivier":                  {"socialistes":true,"centristes":true,"verts":true},
-    "arc-en-ciel au gambienne":              {"socialistes":true,"libéraux":true  ,"verts":true},
+    "arc-en-ciel ou gambienne":              {"socialistes":true,"libéraux":true  ,"verts":true},
     "jamaïcaine":               {"libéraux":true   ,"centristes":true,"verts":true},
 
     "rouge romaine":{"socialistes":true,"centristes":true},
