--- a/index.html
+++ b/index.html
@@ -893,6 +893,7 @@ progrInit : {
     }
    },
    specCoa : {
+    "miroir (des exécutifs régionaux)":{"CD&V":true, "N-VA":true, "Open Vld":true,"PS":true, "MR":true, "ecolo":true},
     "centre-droit diminuée":{"CD&V":true, "N-VA":true, "CDh":true, "MR":true},
     "suédoise ou kamikaze":{"CD&V":true, "N-VA":true, "Open Vld":true, "MR":true}
    },
