--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@ progrInit : {
 
   var inputs;
   var tradCoa = {
-    "quadripartite d’union nationale":{
+    "Vivaldi":{
       "socialistes":true, 
       "libéraux":true, 
       "centristes":true, 
@@ -1021,6 +1021,7 @@ progrInit : {
     "violette":     {"socialistes":true,"libéraux":true},
     "turquoise":    {"libéraux":true   ,"verts":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
+    "portugaise":   {"socialistes":true   ,"verts":true},
     "centre-droit ou grande suédoise":{"libéraux":true   ,"centristes":true, "N-VA":true},
     "bourguignonne": {"libéraux":true   ,"N-VA":true, "socialistes":true},
 
