exclusion Emir Kir du PS

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ footer {
     "PVDA":4,
     "ecolo":12,
     "GROEN!":9,
-    "PS":20,
+    "PS":19,
     "sp.a":9,
     "CDh":5,
     "CD&V":12,
@@ -770,7 +770,8 @@ footer {
     "MR":14,
     "Open Vld":12,
     "N-VA":25,
-    "VB":18
+    "VB":18,
+    "Kir":1,
    },
    sena : {
     "N-VA":9,
@@ -785,7 +786,8 @@ footer {
     "VB":7,
     "DéFI":0,
     "PTB":4,
-    "PVDA":1
+    "PVDA":1,
+	"Kir":0
    },
    dePart : "MR", // le parti du sénateur germanophone (siège à décompter pour atteindre la majorité francophone)
    gagnants : { // progressions
@@ -889,6 +891,13 @@ progrInit : {
       consti:false,
       insti:false,
       lingequi:false
+    },
+    "Kir":{
+      require:[],
+      reject:[],
+      consti:false,
+      insti:false,
+      lingequi:false
     }
    },
    specCoa : {
@@ -952,7 +961,8 @@ progrInit : {
     "VU":"NL",
     "PTB-GO !":"FR",
     "PTB":"FR",
-    "PVDA":"NL"
+    "PVDA":"NL",
+	"Kir":"FR"
   };
   var color = {
     "CD&V N-VA":"#F89734",
@@ -981,7 +991,8 @@ progrInit : {
     "VU":"#FCB340",
 	"PTB-GO !":"#B30000",
 	"PTB":"#B30000",
-	"PVDA":"#B30303"
+	"PVDA":"#B30303",
+	"Kir":"#888888"
   };
   
   var famille = {
