--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,7 @@ progrInit : {
     "olivier":                  {"socialistes":true,"centristes":true,"verts"     :true},
     "arc-en-ciel ou gambienne": {"socialistes":true,"libéraux"  :true,"verts"     :true},
     "jamaïcaine":               {"libéraux"   :true,"centristes":true,"verts"     :true},
+    "Arizona": {"libéraux":true, "centristes":true, "N-VA":true, "sp.a":true}, 
 
     "centre-droit ou grande suédoise":{"libéraux":true   ,"centristes":true, "N-VA":true},
     "bourguignonne": {"libéraux":true   ,"N-VA":true, "socialistes":true},
