coa centre-droit et bourguignone pas de sens en 1999 car pas encore de nva

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ footer {
 
   var inputs;
   var tradCoa = {
-    "quadripartite d'union nationale":{type:"S",
+    "quadripartite, union nationale":{type:"S",
 	           partys:[
       "socialistes", 
       "libéraux", 
@@ -179,9 +179,6 @@ footer {
     "arc-en-ciel ou gambienne": {type:"S", partys:["socialistes","libéraux"  ,"verts"     ]},
     "jamaïcaine":               {type:"S", partys:["libéraux"   ,"centristes","verts"     ]},
 
-    "centre-droit ou grande suédoise":{type:"D", partys:["libéraux"   ,"centristes", "N-VA"]},
-    "bourguignonne": {type:"D", partys:["libéraux"   ,"N-VA", "socialistes"]},
-	
     "rouge romaine":{type:"S", partys:["socialistes","centristes"]},
     "violette":     {type:"S", partys:["socialistes","libéraux"]},
     "turquoise":    {type:"S", partys:["libéraux"   ,"verts"]},
